--- a/styles/Dark.css
+++ b/styles/Dark.css
@@ -1,6 +1,7 @@
 html {
-    font-size: 10px; /* px means "pixels": the base font size is now 10 pixels high */
-    font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
+    font-size: 10px;
+    font-family: "Open Sans", sans-serif;
+    background-color: #1a1a1a;
 }
 
 h1 {
