--- a/styles/Dark.css
+++ b/styles/Dark.css
@@ -5,9 +5,9 @@ html {
 }
 
 body {
-    width: 600px;
+    width: 80%;
     margin: 0 auto;
-    background-color: #3a0052;
+    background-color: #00578a;
     padding: 0 20px 20px 20px;
 }
 
@@ -16,8 +16,7 @@ h1 {
     text-align: center;
     margin: 0;
     padding: 20px 0;
-    color: #00539f;
-    text-shadow: 3px 3px 1px black;
+    color: #000000;
 }
   
 p,
@@ -25,5 +24,10 @@ li {
     font-size: 16px;
     line-height: 2;
     letter-spacing: 1px;
+}
+
+img {
+    display: block;
+    margin: 0 auto;
 }
   
