--- a/styles/Dark.css
+++ b/styles/Dark.css
@@ -29,6 +29,6 @@ li {
 img {
     display: block;
     margin: 0 auto;
-    width: fit-content(80%);
+    width: anchor-size(--myAnchor body, 80%);
 }
   
