clamped height on img

--- a/styles/Dark.css
+++ b/styles/Dark.css
@@ -28,9 +28,6 @@ li {
 
 img {
     display: block;
-}
-
-.imginline{
-    width: inherit;
-    align-content: center;
+    max-height: 50%;
+    width: auto;
 }
